Correção erro logo

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         <div class="footerDesktop">
           <div class="logo">
-            <img src="assets/img/LogoWhite.png" alt="">
+            <img src="assets/img/logoWhite.png" alt="">
           </div>
           <div class="icons">
             <span class="textContainer">
